<resources>
    <string name="app_name">InstagramVers2</string>
    <string name="userName">agent007</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="user_name">Username</string>
    <string name="website">Website</string>
    <string name="bio">Bio</string>
    <string name="privateInfo">Private Information</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="logIn">Log In</string>
    <string name="signUp">Don\'t have an account? <b>Sign up.</b></string>


</resources>