<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/scrollView"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

        <ImageView
            android:id="@+id/instagram_image"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:src="@drawable/instagram"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email_input"
            style="@style/login_input"
            android:layout_marginTop="40dp"
            android:background="@drawable/login_input_bg"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/instagram_image"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/password_input"
            style="@style/login_input"
            android:background="@drawable/login_input_bg"
            android:hint="@string/password"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/email_input"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/login_button"
            style="@style/login_button"
            android:layout_marginBottom="263dp"
            android:background="@drawable/login_button_bg"
            android:text="@string/logIn"
            android:textAllCaps="false"
            android:textColor="@color/login_btn_color"
            app:layout_constraintTop_toBottomOf="@id/password_input"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/create_account_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:background="@drawable/top_border_grey"
            android:gravity="center"
            android:text="@string/signUp"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>