<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/toolbar"
            android:elevation="4dp"
            app:contentInsetStart="0dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/close_image"
                    style="@style/toolbar_image"
                    android:src="@drawable/ic_close_image"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/edit_profile_txt"
                    style="@style/toolbar_title"
                    android:text="@string/edit_profile"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/close_image"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/save_image"
                    style="@style/toolbar_image"
                    android:src="@drawable/ic_check_image"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/android_pic"
            app:civ_border_color="@color/grey_sec"
            app:civ_border_width="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:id="@+id/name_label"
            style="@style/edit_profile_label"
            android:labelFor="@id/name_input"
            android:text="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_image" />

        <EditText
            android:id="@+id/name_input"
            style="@style/edit_profile_input"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/name_label" />

        <TextView
            android:id="@+id/username_label"
            style="@style/edit_profile_label"
            android:labelFor="@id/username_input"
            android:text="@string/user_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_input" />

        <EditText
            android:id="@+id/username_input"
            style="@style/edit_profile_input"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/username_label" />

        <TextView
            android:id="@+id/website_label"
            style="@style/edit_profile_label"
            android:labelFor="@id/website_input"
            android:text="@string/website"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_input" />

        <EditText
            android:id="@+id/website_input"
            style="@style/edit_profile_input"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/website_label" />

        <TextView
            android:id="@+id/bio_label"
            style="@style/edit_profile_label"
            android:labelFor="@id/bio_input"
            android:text="@string/bio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/website_input" />

        <EditText
            android:id="@+id/bio_input"
            style="@style/edit_profile_input"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/bio_label" />

        <TextView
            android:id="@+id/privateInfo_label"
            style="@style/edit_profile_label"
            android:labelFor="@id/privateInfo_input"
            android:text="@string/privateInfo"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bio_input" />

        <EditText
            android:id="@+id/privateInfo_input"
            style="@style/edit_profile_input"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/privateInfo_label" />

        <TextView
            android:id="@+id/email_label"
            style="@style/edit_profile_label"
            android:labelFor="@id/email_label_input"
            android:text="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/privateInfo_input" />

        <EditText
            android:id="@+id/email_label_input"
            style="@style/edit_profile_input"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/email_label"
            />

        <TextView
            android:id="@+id/phone_label"
            style="@style/edit_profile_label"
            android:labelFor="@id/phone_input"
            android:text="@string/phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_label_input" />

        <EditText
            android:id="@+id/phone_input"
            style="@style/edit_profile_input"
            android:inputType="phone"
            app:layout_constraintTop_toBottomOf="@id/phone_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>